Update NFL Combine Cornerback Data Analysis.ipynb

--- a/NFL Combine Cornerback Data Analysis.ipynb
+++ b/NFL Combine Cornerback Data Analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "\n",
     "<h1 style=\"text-align: center;\">NFL Combine Cornerback Build-Up</h1>\n",
-    "<p style=\"text-align: center;\"><em>Exploratory Analysis and Predictive Modeling Using NCAA and Combine Metrics</em></p>\n",
+    "<p style=\"text-align: center;\"><em>Exploratory Analysis and Predictive Modeling Using NFL Combine Metrics and Body Measurements</em></p>\n",
     "\n",
     "---\n",
     "\n",
